Fixed overlap issue with navbar

--- a/styles/style.css
+++ b/styles/style.css
@@ -56,6 +56,7 @@ a {
   background-color: #E3F2FD;
   list-style-type: none;
   font-size: 18px; 
+  z-index: 1000;
 }
 
 .uppernavbar li {
